# DL_22_11_2025

./: .gitignore  README.md  main.py  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
10_podstawy_pytorch/: 00-Tensor-BasicsPL.ipynb  01-Tensor-OperationsPL.ipynb  02-DataSets-with-PytorchPL.ipynb  03-PyTorch-Basics-ExercisesPL.ipynb  03b-PyTorch-Basics-Exercises-SolutionsPL.ipynb  04-GPU-i-inne-CUDA.ipynb  07-zapis-i-odczyt-modelu-w-pytorch.ipynb  simple_regressor.pt  simple_regressor_full.pt
15_podstawy_tensorflow/: 00-TensorFlow-Tensor-BasicsPL.ipynb  01-TensorFlow-OperationsPL.ipynb  02-DataSets-z-TensorFlow.ipynb  03-TensorFlow-Basics-Exercises.ipynb  03b-TensorFlow-Basics-Exercises-SolutionsPL.ipynb  04-GPU-TPI-i-inne-CUDA.ipynb  07-zapis-i-odczyt-modelu-w-TS.ipynb  Untitled.ipynb  model.keras
16_wprowadzenie_do_DL/: 01_metryki.ipynb  02_typy_danych_w_statystyce_i_ML.ipynb  03_embedingi.ipynb  11_cwiczenie_perceptron-rozwiazanie.ipynb  11_cwiczenie_perceptron.ipynb  50-Cross-Validation.ipynb  Perceptron_implementacja.ipynb  SGD_with_momentum.ipynb  optymalizatory.ipynb  regularyzacja.ipynb
20_ANN/: 10-Linear-Regression-w-PyTorch-i-TensorFlow.ipynb  15-Prosta-sieć-NN-z-PyTorch.ipynb  16-spirale-klasyfikacja-problem-z-playgroundu.ipynb  IrisDatasetModel.pt  Zadanie_spirale.ipynb  taxi.ipynb  taxi_keras.ipynb
30_praca_z_obrazem/: 00-MNIST-ANN-PyTorch.ipynb  00-MNIST-ANN-TensorFlow.ipynb  10-CNN.ipynb  11-MNIST-with-CNN.ipynb  notebook1e135ae884.ipynb
40_praca_z_danymi_sekwencyjnymi/: 20-NLP-PyTorch.ipynb  30-TimeSeries-PyTorch-RNN.ipynb  (+1 more)
(+61 files in other folders)
